fix navbar resizing on small screens

--- a/src/styles/components/navbar.module.sass
+++ b/src/styles/components/navbar.module.sass
@@ -17,29 +17,40 @@
     text-decoration: none
 
   h1
+    font-size: 2.5rem
     color: variables.$light-primary
 
-  form
-    display: flex
-    justify-content: center
-    margin: 0 2rem
+  .search-container
+    margin: 0 1rem 0 2rem
+    height: 2rem
 
-    .search-input
-      padding: 0.5rem
-      width: 100%
-      max-width: 20rem
-      color: variables.$light-primary
+    &.btn-only
+      display: flex
+      justify-content: flex-end
+
+      > .search-btn
+        border: none
+        width: fit-content
+
+    form
+      display: flex
+      justify-content: center
+
+      .search-input
+        padding: 0.5rem
+        width: 100%
+        max-width: 20rem
+        color: variables.$light-primary
+        background: none
+        border: none
+        border-bottom: 3px solid variables.$light-primary
+        outline: none
+
+    .search-btn
       background: none
       border: none
       border-bottom: 3px solid variables.$light-primary
-      outline: none
-
-    button
-      background: none
-      border: none
-      border-bottom: 3px solid variables.$light-primary
-      cursor: pointer
-
+      cursor: pointer        
 
   .user-profile
     background: none
